--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,11 @@
     <string name="app_name">Kapukurri</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_create_family_group">CreateFamilyGroupActivity</string>
-    <string name="title_activity_family_tree">FamilyTreeActivity</string>
-    <string name="title_activity_record_audio">RecordAudioActivity</string>
-    <string name="title_activity_add_info">AddInfoActivity</string>
-    <string name="title_activity_add_tags">AddTagsActivity</string>
-    <string name="title_activity_stories">StoriesActivity</string>
+    <string name="title_activity_create_family_group">Create Family Group</string>
+    <string name="title_activity_family_tree">Family Tree</string>
+    <string name="title_activity_record_audio">Record Audio</string>
+    <string name="title_activity_add_info">Add Info</string>
+    <string name="title_activity_add_tags">Add Tags</string>
+    <string name="title_activity_stories">Stories</string>
 
 </resources>
