Login Layout started
Started login layout and added icons to drawables

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="title_activity_add_info">Add Info</string>
     <string name="title_activity_add_tags">Add Tags</string>
     <string name="title_activity_stories">Stories</string>
+    <string name="title_activity_login">Login</string>
 
 </resources>
