Create side completed
Tag layout completed.  Included return record.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,7 @@
     <string name="title_activity_add_tags">Add Tags</string>
     <string name="title_activity_stories">Stories</string>
     <string name="title_activity_login">Login</string>
+    <string name="labelText">Tag details</string>
+    <string name="newlabelText">Add new tag here</string>
 
 </resources>
